starlark-rust/starlark/src/typing/golden/incorrect_type_dot.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib tests
# ```

Code:
def foo(x: list.foo.bar):
    pass

Error:
error: Operation `.foo` not supported on type `function`
 --> filename:2:12
  |
2 | def foo(x: list.foo.bar):
  |            ^^^^^^^^
  |

Compiler typechecker (eval):
error: Operation `.foo` not supported on type `function`
 --> filename:2:17
  |
2 | def foo(x: list.foo.bar):
  |                 ^^^
  |
